syntax = "proto3";

package fileProto;
//查找位置 产生的包名
option go_package = "depart/file/proto;pb";
import "google/protobuf/empty.proto";
//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative  depart/file/proto/*.proto
service FileService {
  // 保存文件
  rpc SaveFile(FileReq) returns (google.protobuf.Empty) {}
  // 删除文件
  rpc DeleteFile(FileReq) returns (google.protobuf.Empty) {}
  // 删除文件
  rpc ListFile(ListFileReq) returns (ListFileRes) {}
}

message FileReq {
  string file_hash = 1;
  string file_name = 2;
  int64  file_size =3;
  string locatedAt =4;
}

message ListFileReq {
  repeated string file_hash = 1;
}
message ListFileRes {
  repeated FileRes file_list =1 ;
}




message FileRes {
  string file_hash = 1;
  string file_name = 2;
  int64  file_size =3;
  string locatedAt =4;
  int32  id = 5;
  string created_at =6;
  string updated_at =7;
}





